# crazyflie-lib-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  ARCHITECTURE_SUMMARY.md  CLAUDE.md  COMPLETE_FEATURE_INVENTORY.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  arena_16.yaml  crtp-dissector.lua  module.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_linux.sh  tox.ini
.github/workflows/: CI.yml  build.yml  dependency_check.yml  nightly.yml  python-publish.yml  test-python-publish.yml
Geo_Estimation_Files/: 1_Origin_2025-03-12-rots.txt  2_X-axis_2025-03-12-rots.txt  3_XY-plane_pointA_2025-03-12-rots.txt  4_XY-plane_pointB_2025-03-12-rots.txt  5_XY-plane_pointC_2025-03-12-rots.txt  6_XY-plane_pointD_2025-03-12-rots.txt  7_Samples_2025-03-12-rots.txt  8_Calibs_2025-03-12.yaml  Lighthouse_x16.yaml
MeshRaDs-Project/: Swarm_Meausrment.py  logging.csv
OurCodes/testing/: flight_log.csv  testing1.py
cflib/: __init__.py  _rust.pyi  _rust_wrapper.py  trajectory.py
cflib/bootloader/: __init__.py  boottypes.py  cloader.py
cflib/cpx/: __init__.py  transports.py
cflib/crazyflie/: __init__.py  appchannel.py  commander.py  console.py  extpos.py  high_level_commander.py  link_statistics.py  localization.py  log.py  mem.py  param.py  platformservice.py  supervisor.py  swarm.py  syncCrazyflie.py  syncLogger.py  toc.py  toccache.py
cflib/crtp/: __init__.py  bledriver.py  cflinkcppdriver.py  cflinkrsdriver.py  cpxdriver.py  crtpdriver.py  crtpstack.py  debugdriver.py  exceptions.py  nativedriver.py  pcap.py  prrtdriver.py  radio_link_statistics.py  radiodriver.py  radioserverdriver.py  serialdriver.py  signal_health.py  tcpdriver.py  udpdriver.py  usbdriver.py
cflib/drivers/: __init__.py  cfusb.py  crazyradio.py
cflib/localization/: __init__.py  _ippe.py  ippe_cf.py  lighthouse_bs_geo.py  lighthouse_bs_vector.py  lighthouse_cf_pose_sample.py  lighthouse_config_manager.py  lighthouse_geo_estimation_manager.py  lighthouse_geometry_solution.py  lighthouse_geometry_solver.py  lighthouse_initial_estimator.py  lighthouse_sample_matcher.py  lighthouse_sweep_angle_reader.py  lighthouse_system_aligner.py  lighthouse_system_aligner2.py  lighthouse_system_scaler.py  lighthouse_types.py  lighthouse_utils.py  param_io.py  user_action_detector.py
cflib/positioning/: __init__.py  motion_commander.py  position_hl_commander.py
cflib/utils/: __init__.py  callbacks.py  encoding.py  fp16.py  multi_ranger.py  multiranger.py  param_file_helper.py  power_switch.py  reset_estimator.py  supervisor_state.py  uri_helper.py
docs/: crazyradio_lib.md  eeprom.md  index.md  install_from_source.md  matlab.md  python_api.md
docs/_data/: menu.yml
docs/api/: index.md
docs/development/: apis_versions_deprecation.md  eeprom.md  index.md  matlab.md  testing.md  uart_communication.md  wireshark.md
docs/functional-areas/: crazyradio_lib.md  index.md
docs/functonal-areas/: crazyradio_lib.md
docs/installation/: index.md  install.md  install_from_source.md  usb_permissions.md
docs/step-by-step/: connect_log_param.md
docs/user-guides/: index.md  python_api.md  sbs_connect_log_param.md  sbs_motion_commander.md  sbs_swarm_interface.md  uart_communication.md
docs/wireshark/: wireshark.md
examples/: README.md  app_channel.py  arming.py  autonomousSequence.py  autonomous_sequence_high_level.py  basicLedTiming.py  basicLedmemSync.py  basicLedparamSync.py  basiclog.py  basiclogSync.py  basicparam.py  cfbridge.py  console.py  emergency_stop.py  emergency_watchdog.py  erase-ow.py  external_position.py  flash-memory.py  flowsequenceSync.py  high_level_commander.py  lighthouse_angles.py  lighthouse_persist.py  log.py  lps_reboot_to_bootloader.py  motion_commander_demo.py  multiramp.py  multiranger_pointcloud.py  multiranger_push.py  param.py  pim_autonomousSequence.py  pim_feedback_autonomous_led.py  pim_feedback_autonomous_sound.py  pim_motion_flying.py  pim_position_commander_demo.py  pim_position_hl_commander_swarm.py  platform_info.py  position_commander_demo.py  push.py  radio-test.py  radioTest.py  (+16 more)
examples/MOST_Drone/: EightMovements_task.py  EightMovements_task_interact.py  EightMovements_task_interact_all_movement.py  EightMovements_task_interact_v2.py  EightMovements_task_interact_v3.py  EightMovements_task_interact_v4.py  EightMovements_task_interact_v5.py  EightMovements_task_interact_v5_8posts.py  EightMovements_task_interact_v5_8posts_add-reset_cond.py  EightMovements_task_interact_v5_added-condition.py  EightMovements_task_interact_v6_check.py  EightMovements_unit_test.py  Lighthouse_get_pos.py  Movement_task_interact.py  Movement_task_interact_final.py  Movement_task_interact_final_HF_CJ.py  Movement_task_interact_final_HF_CJ_long.py  Movement_task_interact_final_HF_CJ_one-by-one.py  Movement_task_interact_final_HF_CJ_one-by-one_test.py  Movement_task_interact_final_HF_CJ_test.py  Movement_task_interact_final_HF_CJ_test_train.py  Movement_task_interact_final_HF_CJ_training.py  Movement_task_interact_final_HtH.py  Movement_task_interact_final_HtH_EEG_test.py  Movement_task_interact_final_HtH_sin.py  Movement_task_interact_final_HtH_sin_long.py  Movement_task_interact_final_HtH_sin_long_test.py  Movement_task_interact_final_HtH_sin_one-by-one.py  Movement_task_interact_final_HtH_sin_one-by-one_test.py  Movement_task_interact_final_HtH_sin_training.py  Movement_task_interact_final_HtH_test_train.py  Movement_task_interact_final_old.py  Movement_task_interact_final_tiptoe.py  Task_for_reaction.py  condition_expla.txt  conditions.txt  imshow-test.py  unit-test-motion_commander.py
examples/PimMasterThesis/: pim.txt  (+15 more)
lpslib/: __init__.py  lopoanchor.py
rust/: Cargo.toml
rust/src/: crazyflie.rs  error.rs  lib.rs  link_context.rs  toc_cache.rs
rust/src/subsystems/: commander.rs  console.rs  high_level_commander.rs  localization.rs  log.rs  memory.rs  mod.rs  param.rs  platform.rs
scripts/: fix_stubs.py
tests/: __init__.py  test_crazyflie.py  test_link_context.py
tools/: crtp-dissector.lua
wireshark/: README.md  crtp-dissector.lua
(+262 files in other folders)
