[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cflib"
dynamic = ["version"]
description = "Crazyflie Python driver"
authors = [
    { name = "Bitcraze and contributors", email = "contact@bitcraze.io" },
]

readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "GPLv3" }
keywords = ["driver", "crazyflie", "quadcopter"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",

    # Supported Python versions
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.10"

dependencies = [
    "pyusb~=1.2",
    "libusb-package~=1.0",
    "scipy~=1.14",
    "numpy~=2.2",
    "packaging~=25.0",
]

[project.urls]
Homepage = "https://www.bitcraze.io"
Documentation = "https://www.bitcraze.io/documentation/repository/crazyflie-lib-python/master/"
Repository = "https://github.com/bitcraze/crazyflie-lib-python"
Issues = "https://github.com/bitcraze/crazyflie-lib-python/issues"

[project.optional-dependencies]
dev = ["pre-commit"]
qualisys = ["qtm-rt~=3.0.2"]
motioncapture = ["motioncapture~=1.0a4"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { exclude = ["examples", "test"] }

[tool.setuptools.package-data]
"cflib.resources.binaries" = ["cflib/resources/binaries/*.bin"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
