[package]
name = "cflib-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "cflib_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
# Reference your existing Rust library
# crazyflie-lib = "0.2.0"
crazyflie-lib = "0.3.0"
crazyflie-link = "0.3.0"
tokio = { version = "1.48", features = ["full"] }
futures = "0.3.31"

[build-dependencies]
pyo3-build-config = "0.26"

